--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- Permanent Top Bar -->
     <div class="top-bar" id="top-bar">
-        <a href="index.html">
+        <a href="/">
             <img src="wikipedia.png" alt="Perrypedia Logo">
             Perrypedia
         </a>
@@ -140,6 +140,7 @@
         <div class="directory">
             <h2>Perry Friday Directory</h2>
             <ul>
+                <li><a href="/Perry/9-6-24.html">6th September 2024</a></li>
                 <li><a href="/Perry/8-30-24.html">30th August 2024</a></li>
                 <li><a href="/Perry/8-23-24.html">23rd August 2024</a></li>
                 <!-- Add more links as you release new Perry Fridays -->
