--- a/Perry/8-30-24.html
+++ b/Perry/8-30-24.html
@@ -116,7 +116,7 @@
 
     <!-- Permanent Top Bar -->
     <div class="top-bar" id="top-bar">
-        <a href="index.html">
+        <a href="/">
             <img src="../wikipedia.png" alt="Perrypedia Logo">
             Perrypedia
         </a>
