--- a/Perry/8-30-24.html
+++ b/Perry/8-30-24.html
@@ -111,7 +111,7 @@
 
     <!-- Announcement Bar (Will appear on Fridays) -->
     <div id="announcement-bar" class="announcement-bar">
-        📢 PERRY FRIDAY! New Perry picture. <a href="example.com/friday/08-30-2024">Click here to view it!</a>
+        📢 PERRY FRIDAY! New Perry picture. <a href="../Perry/9-6-24.html">Click here to view it!</a>
     </div>
 
     <!-- Permanent Top Bar -->
