--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Perrypedia - The World's Largest Free Online Perry Encyclopedia</title>
+    <title>Perrypedia</title>
     <style>
         html, body {
             height: 100%;
