--- a/Perry/8-30-24.html
+++ b/Perry/8-30-24.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Perry Friday - 30th August 2024</title>
+    <title>Perrypedia</title>
+    <link rel="icon" type="image/x-icon" href="/icon.ico">
     <style>
         html, body {
             height: 100%;
