--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Announcement Bar -->
     <div id="announcement-bar" class="announcement-bar">
         📢 PERRY FRIDAY! New Perry picture.
-        <a href="example.com/friday/08-30-2024">Click here to view it!</a>
+        <a href="../Perry/9-6-24.html">Click here to view it!</a>
     </div>
 
     <!-- Permanent Top Bar -->
