--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- Permanent Top Bar -->
     <div class="top-bar" id="top-bar">
         <a href="/">
-            <img src="wikipedia.png" alt="Perrypedia Logo">
+            <img src="icon.ico" alt="Perrypedia Logo">
             Perrypedia
         </a>
     </div>
