--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
     <!-- Permanent Top Bar -->
     <div class="top-bar" id="top-bar">
         <a href="/">
-            <img src="icon.ico" alt="Perrypedia Logo">
+            <img src="wikipedia.png" alt="Perrypedia Logo">
             Perrypedia
         </a>
     </div>
 
     <div class="content">
         <div class="logo">
-            <img src="wikipedia.png" alt="Perrypedia Logo">
+            <img src="icon.png" alt="Perrypedia Logo">
         </div>
         <h1>The World's Largest Free Online Perry Encyclopedia</h1>
 
