new icon larger

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="content">
         <div class="logo">
-            <img src="icon.png" alt="Perrypedia Logo">
+            <img src="wikipedia.png" alt="Perrypedia Logo">
         </div>
         <h1>The World's Largest Free Online Perry Encyclopedia</h1>
 
