--- a/Perry/8-30-24.html
+++ b/Perry/8-30-24.html
@@ -105,6 +105,28 @@
             h1 {
                 font-size: 1.8em;
             }
+            .top-bar {
+                padding: 8px;
+            }
+            .top-bar img {
+                height: 30px;
+            }
+            .top-bar a {
+                font-size: 1.2em;
+            }
+            .content {
+                padding: 80px 10px 10px;
+            }
+            .content img {
+                max-height: 50vh; /* Adjusted for smaller screens */
+            }
+            .content p {
+                font-size: 1em;
+                max-width: 90%; /* Allow more width on smaller screens */
+            }
+            footer {
+                font-size: 0.8em;
+            }
         }
     </style>
 </head>
