--- a/Perry/9-6-24.html
+++ b/Perry/9-6-24.html
@@ -25,6 +25,8 @@
             margin: 20px 0;
             text-align: center;
             font-weight: normal;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .top-bar, .announcement-bar, footer {
@@ -42,6 +44,7 @@
             left: 0;
             z-index: 1000;
             transition: top 0.3s ease;
+            justify-content: center; /* Center content */
         }
 
         .top-bar img {
@@ -70,6 +73,8 @@
             left: 0;
             z-index: 1001;
             display: none;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .announcement-bar a {
@@ -86,6 +91,7 @@
             text-align: center;
             padding: 100px 20px 20px;
             box-sizing: border-box;
+            width: 100%;
         }
 
         .content img {
@@ -110,6 +116,7 @@
             display: flex;
             justify-content: center;
             box-sizing: border-box;
+            width: 100%;
         }
 
         @media (max-width: 1024px) {
