--- a/Perry/9-6-24.html
+++ b/Perry/9-6-24.html
@@ -8,126 +8,153 @@
     <link rel="icon" type="image/x-icon" href="/icon.ico">
     <style>
         html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-            background-color: #f9f9f9;
-            display: flex;
-            flex-direction: column;
-        }
-        h1 {
-            font-family: Georgia, serif;
-            font-size: 2.5em;
-            margin: 20px 0;
-            text-align: center;
-            font-weight: normal;
-        }
-        .top-bar {
-            background-color: #e0e0e0;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-            transition: top 0.3s ease;
-        }
-        .top-bar img {
-            height: 40px;
-            margin-right: 10px;
-        }
-        .top-bar a {
-            color: #000;
-            text-decoration: none;
-            font-size: 1.5em;
-            font-family: Georgia, serif;
-            display: flex;
-            align-items: center;
-        }
-        .announcement-bar {
-            background-color: #ffeb3b;
-            color: black;
-            padding: 10px;
-            text-align: center;
-            font-size: 1.2em;
-            font-weight: bold;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1001;
-            display: none;
-        }
-        .announcement-bar a {
-            color: blue;
-            text-decoration: underline;
-        }
-        .content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 100px 20px 20px;
-            box-sizing: border-box;
-        }
-        .content img {
-            max-width: 100%;
-            max-height: 60vh;
-            object-fit: contain;
-        }
-        .content p {
-            font-size: 1.2em;
-            margin: 20px 0;
-            max-width: 80%;
-            word-wrap: break-word;
-        }
-        footer {
-            background-color: #f1f1f1;
-            padding: 10px;
-            text-align: center;
-            font-size: 0.9em;
-            position: relative;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        @media (max-width: 1024px) {
-            h1 {
-                font-size: 2em;
-            }
-        }
-        @media (max-width: 720px) {
-            h1 {
-                font-size: 1.8em;
-            }
-            .top-bar {
-                padding: 8px;
-            }
-            .top-bar img {
-                height: 30px;
-            }
-            .top-bar a {
-                font-size: 1.2em;
-            }
-            .content {
-                padding: 80px 10px 10px;
-            }
-            .content img {
-                max-height: 50vh; /* Adjusted for smaller screens */
-            }
-            .content p {
-                font-size: 1em;
-                max-width: 90%; /* Allow more width on smaller screens */
-            }
-            footer {
-                font-size: 0.8em;
-            }
-        }
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #f9f9f9;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    box-sizing: border-box; /* Ensure padding and border are included in width and height */
+}
+
+h1 {
+    font-family: Georgia, serif;
+    font-size: 2.5em;
+    margin: 20px 0;
+    text-align: center;
+    font-weight: normal;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.top-bar {
+    background-color: #e0e0e0;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.top-bar img {
+    height: 40px;
+    margin-right: 10px;
+}
+
+.top-bar a {
+    color: #000;
+    text-decoration: none;
+    font-size: 1.5em;
+    font-family: Georgia, serif;
+    display: flex;
+    align-items: center;
+}
+
+.announcement-bar {
+    background-color: #ffeb3b;
+    color: black;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1001;
+    display: none;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.announcement-bar a {
+    color: blue;
+    text-decoration: underline;
+}
+
+.content {
+    margin-top: 60px; /* Adjust for top bar height */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.content img {
+    max-width: 100%;
+    max-height: 60vh;
+    object-fit: contain;
+}
+
+.content p {
+    font-size: 1.2em;
+    margin: 20px 0;
+    max-width: 80%;
+    word-wrap: break-word;
+}
+
+footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+    font-size: 0.9em;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 20px; /* Ensure space below content */
+}
+
+@media (max-width: 1024px) {
+    h1 {
+        font-size: 2em;
+    }
+}
+
+@media (max-width: 720px) {
+    h1 {
+        font-size: 1.8em;
+    }
+
+    .top-bar {
+        padding: 8px;
+    }
+
+    .top-bar img {
+        height: 30px;
+    }
+
+    .top-bar a {
+        font-size: 1.2em;
+    }
+
+    .content {
+        padding: 80px 10px 10px;
+    }
+
+    .content img {
+        max-height: 50vh; /* Adjusted for smaller screens */
+    }
+
+    .content p {
+        font-size: 1em;
+        max-width: 90%; /* Allow more width on smaller screens */
+    }
+
+    footer {
+        font-size: 0.8em;
+    }
+}
+
     </style>
 </head>
 <body>
