--- a/Perry/9-6-24.html
+++ b/Perry/9-6-24.html
@@ -173,7 +173,7 @@
         <h1>Perry Friday - 6th September 2024</h1>
         <img id="perry-image" src="../Perry/Images/friday_perry-9-6-24.png" alt="Perry Friday - 6th September 2024">
         <p id="perry-description">
-            This week's Perry Friday features UNDEFINED Have a great weekend!
+            This week's Perry Friday features Perry in a dark hallway, ominously staring at the camera late at night. Have a great weekend!
         </p>
     </div>
 
